# IPT-CPP

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  main.cpp  main_ros.cpp  package.xml  record_video.c
camera_calibration/: callibrate.py
include/: ipt_receiver.h  ipt_receiver_new.h  ipt_receiver_par.h  socket_data.h  tools.h
launch/: sample.launch  streamer.launch  uwb.launch
main/: main.cpp  main_receiver.cpp  main_ros.cpp  main_streamer.cpp
msys/: CMakeLists.txt  README.md  main_mingw.cpp
params/: cam_new.json  cam_new_1280x720.json  cam_para_80d_1280x720.json  cam_para_80d_640x360.json  cam_para_90d_1280x720.json  cam_para_90d_640x360.json  map_info_15x9.json  map_info_9x9.json
ros/include/: ipt_ros_base.h  ipt_ros_interface.h  ipt_ros_pose_receiver.h  ipt_ros_streamer.h
ros/src/: ipt_ros_base.cpp  ipt_ros_interface.cpp  ipt_ros_pose_receiver.cpp  ipt_ros_streamer.cpp
scripts/: uwb.py  uwb_tag.py
src/: ipt_receiver.cpp  ipt_receiver_new.cpp  ipt_receiver_par.cpp  socket_data.cpp  tools.cpp
tests/: ipt_refactor_test.cpp  rotation_test.cpp  streaming_tcp_test.cpp  video_test.cpp
